# node-win-hid

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  package-lock.json  package.json  tsconfig.json
addons/: MyObject.cc  WinHID.cc  WinHID.h
src/: bindings.ts  index.ts  test.ts
